changed the language error

--- a/yifei/helloWord.html
+++ b/yifei/helloWord.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Hello Git and Github!</h1>
     <p>
-        Greating from Yifei
+        Greeting from Yifei
     </p>
 </body>
 </html>
